[fix] Fixed the unit integration tests